<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Canteen</string>
    <string name="welcome_back" translatable="false">Welcome Back!</string>
    <string name="login_to_continue" translatable="false">Login to continue</string>
    <string name="email">邮箱</string>
    <string name="create_new_account">注册账号</string>
    <string name="sign_in">登 录</string>
    <string name="add_image">添加头像</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="sign_up" translatable="false">注册</string>
    <string name="alert_title" translatable="false">提示</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="text_message_logout">确认要退出吗？</string>
    <string name="canteen_profile">餐厅仓库管理系统</string>
    <string name="home" translatable="false">Home</string>
    <string name="orders" translatable="false">Orders</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="favorites" translatable="false">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search">搜索</string>
    <!--    <string name="select_user">Select User</string>-->
    <!--    <string name="type_a_message">Type a message</string>-->

    <string name="notifications">Notifications</string>
    <string name="collection">Collection</string>
    <string name="inbox">Inbox</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="support">Support</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="nick_name" translatable="false">Nick name</string>
    <string name="verified">Verified</string>
    <string name="user">User</string>
    <string name="title">标题</string>
    <string name="read_more" translatable="false">更多</string>
    <string name="read_less" translatable="false">更少</string>
    <string name="share">分享</string>
    <string name="add_cart" translatable="false">加入购物车</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="show_less" translatable="false">Show less</string>
    <string name="show_more" translatable="false">Show more</string>
    <string name="order" translatable="false">订单</string>
    <string name="profile_error">获取简介错误</string>
    <string name="phone" translatable="false">手机号</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="role" translatable="false">角色</string>
    <string name="select_user">选择用户</string>
    <string name="type_message">发送消息</string>
    <string name="delete">删除</string>
    <string name="less_authority">权限不足</string>
    <string name="success_delete">删除成功</string>
    <string name="add_goods">新增货物</string>
    <string name="add">添加</string>
    <string name="goods_name">商品名</string>
    <string name="goods_price">价格</string>
    <string name="goods_place">来源地</string>
    <string name="goods_content">描述</string>
    <string name="goods_number">数量</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="permission_less">权限不足！</string>
    <string name="upload_success" translatable="false">添加成功</string>
    <string name="upload_failed" translatable="false">添加失败</string>
    <string name="goods_category">类型</string>
    <string name="update">更新</string>
    <string name="update_goods_details">更新货物信息</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="user_list">用户列表</string>
    <string name="delete_conversation">确定删除这个会话吗</string>
    <string name="delete_user">确定删除这个用户吗</string>

</resources>